--- a/app/src/main/res/layout/list_country.xml
+++ b/app/src/main/res/layout/list_country.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
         <variable
@@ -20,14 +19,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="유럽"
-            android:textSize="15dp"
+            android:textSize="16dp"
             android:fontFamily="@font/pretendard_bold"
             android:textColor="@color/black"
             android:background="@drawable/country_bg"
             android:paddingRight="15dp"
             android:paddingLeft="15dp"
             android:paddingBottom="6dp"
-            android:paddingTop="6dp"/>
+            android:paddingTop="6dp"
+            tools:ignore="MissingConstraints" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
