--- a/app/src/main/res/layout/list_course.xml
+++ b/app/src/main/res/layout/list_course.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
@@ -32,6 +30,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/course_tv"
-            tools:listitem="@layout/list_courseimg"/>
+            tools:listitem="@layout/list_courseimg"
+            android:contentDescription="여행 코스 리스트"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
