날씨 화면 일부 작업 진행
날씨 화면 속성 뷰

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="gray_150">#FF7E7E7E</color>
     <color name="sky_blue">#FFD9E4F5</color>
     <color name="gray_50">#FFECEFF4</color>
+    <color name="skyblue">#FFD9E4F5</color>
 </resources>
