--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -23,25 +23,154 @@
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:background="@drawable/search_bg"
-            app:title="검색"
-            app:titleTextColor="@android:color/darker_gray"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:background="@drawable/toolbar_bg"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginHorizontal="30dp"
             app:layout_constraintTop_toBottomOf="@id/stay_logo"
-            android:layout_marginTop="20dp">
-            
+            android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="30dp"/>
+
+        <EditText
+            android:id="@+id/edtSearch"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/toolbar"
+            android:hint="검색"
+            android:textColor="@color/gray_150"
+            android:background="@null"
+            app:layout_constraintTop_toTopOf="@id/toolbar"
+            app:layout_constraintBottom_toBottomOf="@id/toolbar"
+            app:layout_constraintStart_toStartOf="@id/toolbar"
+            app:layout_constraintEnd_toEndOf="@id/toolbar"
+            android:layout_marginStart="15dp"/>
+
             <ImageView
-                android:id="@+id/iv_searching"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:id="@+id/btn_country_search"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:src="@drawable/searching_ic"
-                android:layout_marginEnd="12dp"/>
-        </androidx.appcompat.widget.Toolbar>
-        
+                app:layout_constraintEnd_toEndOf="@id/toolbar"
+                app:layout_constraintTop_toTopOf="@id/toolbar"
+                app:layout_constraintBottom_toBottomOf="@id/toolbar"
+                android:layout_marginEnd="15dp"/>
+
+        <TextView
+            android:id="@+id/tv_area"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="서울"
+            android:fontFamily="@font/pretendard_medium"
+            android:textSize="25dp"
+            android:textColor="@color/black"
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="55dp"/>
+
+        <TextView
+            android:id="@+id/tv_temperature"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="25º"
+            android:fontFamily="@font/pretendard_medium"
+            android:textSize="55dp"
+            android:textColor="@color/black"
+            app:layout_constraintTop_toBottomOf="@id/tv_area"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_state"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="흐림"
+            android:fontFamily="@font/pretendard_medium"
+            android:textSize="15dp"
+            android:textColor="@color/black"
+            app:layout_constraintTop_toBottomOf="@id/tv_temperature"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/tv_max"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="최고: 25º"
+            android:fontFamily="@font/pretendard_medium"
+            android:textSize="15dp"
+            android:textColor="@color/black"
+            app:layout_constraintTop_toBottomOf="@id/tv_state"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/tv_min"
+            android:layout_marginStart="135dp"/>
+
+        <TextView
+            android:id="@+id/tv_min"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="최저: 18º"
+            android:fontFamily="@font/pretendard_medium"
+            android:textSize="15dp"
+            android:textColor="@color/black"
+            app:layout_constraintTop_toBottomOf="@id/tv_state"
+            app:layout_constraintStart_toEndOf="@id/tv_max"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="135dp"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_time_weather"
+            android:layout_width="0dp"
+            android:layout_height="110dp"
+            android:background="@drawable/time_weather_bg"
+            app:layout_constraintTop_toBottomOf="@id/tv_min"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="70dp"
+            android:layout_marginHorizontal="30dp">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_weather"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:listitem="@layout/list_weather"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:id="@+id/tv_duration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="7일간의 일기예보"
+            android:fontFamily="@font/pretendard_medium"
+            android:textSize="10dp"
+            android:textColor="@color/gray_150"
+            app:layout_constraintTop_toBottomOf="@id/layout_time_weather"
+            app:layout_constraintStart_toStartOf="@id/layout_time_weather"
+            android:layout_marginTop="15dp" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_date_weather"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/date_weather_bg"
+            app:layout_constraintTop_toBottomOf="@id/tv_duration"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="30dp">
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
